rpg character maker done updated some colors for more contrast

--- a/src/assets/rpg-demo/index.html
+++ b/src/assets/rpg-demo/index.html
@@ -36,6 +36,6 @@
   <body>
     <app-root></app-root>
     <script src="polyfills-6EAL64PA.js" type="module"></script>
-    <script src="main-BLV7FTRU.js" type="module"></script>
+    <script src="main-5AZ6UKJA.js" type="module"></script>
   </body>
 </html>
